<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.ResultadoActivity">


    <TextView
        android:id="@+id/tituloDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/righteous"
        android:text="@string/tv_descontos"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    DIV - Salario bruto-->
    <LinearLayout
        android:id="@+id/linearSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_radius"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tituloDesc">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv_salarioBruto"
            android:textColor="#3E3E3E"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSalarioBruto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="#000000"
            android:textSize="25sp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearSB">

        <!-- INSS -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:paddingStart="40dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_inss"
                android:textColor="#3E3E3E"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_cifrao"
                android:textAlignment="textStart"
                android:textColor="#020202" />

            <TextView
                android:id="@+id/tvInss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-black"
                android:textColor="#000000" />
        </TableRow>

        <!-- IRRF-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:paddingStart="40dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_irrf"
                android:textColor="#3E3E3E"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_cifrao"
                android:textAlignment="textStart"
                android:textColor="#020202" />

            <TextView
                android:id="@+id/tvIrss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-black"
                android:textColor="#000000" />
        </TableRow>

        <!--        Vale Transporte-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:paddingStart="40dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_valeTransp"
                android:textColor="#3E3E3E"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_cifrao"
                android:textColor="#020202" />

            <TextView
                android:id="@+id/tvValeTransp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-black"
                android:textColor="#000000" />
        </TableRow>

        <!--        Vale Alimentação-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:paddingStart="40dp">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_valeAlimen"
                android:textColor="#3E3E3E"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_cifrao"
                android:textColor="#020202" />

            <TextView
                android:id="@+id/tvValeAlimen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-black"
                android:textColor="#000000" />
        </TableRow>

        <!--        Vale Refeição-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:paddingStart="40dp">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_valeRef"
                android:textColor="#3E3E3E"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_cifrao"
                android:textColor="#020202" />

            <TextView
                android:id="@+id/tvValeRef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-black"
                android:textColor="#000000" />
        </TableRow>

        <!--        Plano de saude-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:paddingStart="40dp">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_planoSaude"
                android:textColor="#3E3E3E"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_cifrao"
                android:textColor="#020202" />

            <TextView
                android:id="@+id/tvPlanoSaude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-black"
                android:textColor="#000000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:paddingStart="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:fontFamily="sans-serif-black"
                android:text="@string/tv_porcentagem"
                android:textColor="#3E3E3E"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="sans-serif-black"
                android:text="%"
                android:textColor="#020202" />

            <TextView
                android:id="@+id/tvPorcetagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:fontFamily="sans-serif-black"
                android:textColor="#000000" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_radius"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv_salarioLiqui"
            android:textColor="#3E3E3E"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSalarioLiquido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="#000000"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAlterar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_radius"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/tv_alterarDados"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnNovaConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_radius"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/tv_novaConsulta"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>