<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/roxo"
    tools:context=".activity.PrimeiraActivity">

    <TextView
        android:id="@+id/idTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo2"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:fontFamily="@font/righteous"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="329dp"
        app:layout_constraintTop_toBottomOf="@+id/idTitulo"
        app:srcCompat="@drawable/img_firstpage" />

    <TextView
        android:id="@+id/idNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_nome"
        android:layout_marginStart="25dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/etxNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_radius"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/idNome">
    </EditText>

    <Button
        android:id="@+id/btnComecar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/btn_comece"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textSize="16sp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/bebas_neue"
        android:textColor="@color/white"
        android:background="@drawable/button_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxNome" />

</androidx.constraintlayout.widget.ConstraintLayout>